<resources>
    <string name="app_name">Personas</string>
    <string name="titulo">REGISTRO</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="leer">Leer</string>
    <string name="futbol">Futbol</string>
    <string name="video_juegos">Video Juegos</string>
    <string name="registrar">Registrar</string>
    <string name="borrar">Borrar</string>
    <string name="numero">No.</string>
    <string name="pasa_tiempo">Pasa Tiempo</string>
    <string name="listar">Listar</string>
    <string name="mensaje">Persona Guardada exitosamente!</string>
    <string name="mostrar">Mostrar en tabla</string>
    <string-array name="opciones">
        <item>@string/registrar</item>
        <item>@string/listar</item>
        <item>@string/mostrar</item>
    </string-array>
</resources>
